<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <!-- Curve Purple Background -->
    <ImageView
        android:id="@+id/iv_curve_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/date_selector"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="21dp"
        android:scaleType="fitXY"
        android:src="@drawable/bookzone_purple_curve" />

    <!-- Header (menimpa background) -->
    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="20dp"
        android:translationZ="2dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back_white"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/booking_zone"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- Play Station Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/playstation_card"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/header_layout"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:id="@+id/card_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/orange_gradient_bg"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_controller"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/playstation_controller"
                android:src="@drawable/ic_playstat" />

            <TextView
                android:id="@+id/tv_playstation_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/iv_controller"
                android:text="@string/play_station_1"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <!-- Calendar Widget Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/calendar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playstation_card"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="@android:color/white"
            android:theme="@style/CalendarViewCustom"
            android:dateTextAppearance="@style/CalendarDateText"
            android:weekDayTextAppearance="@style/CalendarWeekDayText"
            android:clickable="true"
            android:focusable="true" />

    </androidx.cardview.widget.CardView>

    <!-- Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_primary"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/av_booked"
            android:layout_gravity="center"
            android:contentDescription="@string/bookings_tab" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/av_profile"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_tab" />

    </LinearLayout>

</RelativeLayout>